# learning-note

./: April 24.md  CMakeLists.txt  README.md  Steam install Ubuntu.md  arrary.cpp  class.cpp  class.h  class0bject_as_classmember.cpp  class_secanrio_1.h  class_secanrio_2.cpp  class_secanrio_2.h  class_secnario_1.cpp  friend.cpp  function_advance.cpp  logic_process.cpp  pointer_function.h  static_member_and_behaviors.cpp  structure.cpp  structure_lib.h  structure_scenario_1.cpp  this.cpp
.obsidian/: app.json  workspace.json
DJBGS working logbook/: AC1+FastLivo.md  FastLivo2 Code analysis.md  June 10.md  June 12.md  June 14.md  June 16.md  June 21.md  June 23rd.md  LIO LIDAR noise filter before the VIO.md  May 6.md  May 8.md  june 9.md  rs-Fastlivo1-ac1.md  拖点去除.md
Localization/: AMCL.md  cartographer.md
Python/: Class.md  Numpy.md  Python mistakes.md  file operator.md  logic operators.md  write a short python in terminal.md
ROS/: ROS 1 AND ROS 2 COEXIST.md
ROS 1/: Lidar namespace and structure.md  evo.md
Wechat installation/: wechat installation.md
basic_knowledge/: arrary.cpp  input_and_output.cpp  loop.cpp  variable_review.cpp
c and cpp/: gcc and g++.md
calculation_operator_reloading/: adding_reloading.cpp
career/: future plan.md
class/: class_secanrio_1.h  class_secnario_1.cpp  const_class_and_behaviors.cpp  constructor_and_deconstructor.cpp  constructor_with_initialization_list.cpp  deepcopy_and_shallowcopy.cpp  friend.cpp
daily plan/: May 4.md  May 5.md  May 6.md  May 7.md  May 8.md
ee5411_as_part2/: classification.py  (+1 more)
git/: git commends.md
(+361 files in other folders)
